@@ -166,6 +166,7 @@ gboolean show_media_label;
 gboolean control_instance;
 gchar *playlistname;
 gboolean ok_to_play;
+gchar *subtitle;
 
 // tv stuff
 gchar *tv_device;
