@@ -67,6 +67,7 @@ static GOptionEntry entries[] = {
 	{"rpname",0,0,G_OPTION_ARG_STRING, &rpname, N_("Real Player Name"),"NAME"},
 	{"rpconsole",0,0,G_OPTION_ARG_STRING, &rpconsole, N_("Real Player Console ID"),"CONSOLE"},
 	{"rpcontrols",0,0,G_OPTION_ARG_STRING, &rpcontrols, N_("Real Player Console Controls"),"Control Name,..."},
+	{"subtitle",0,0,G_OPTION_ARG_STRING, &subtitle, N_("Subtitle file for first media file"),"FILENAME"},	
 	{"tvdevice",0,0,G_OPTION_ARG_STRING, &tv_device, N_("TV device name"),"DEVICE"},	
     {"tvdriver",0,0,G_OPTION_ARG_STRING, &tv_driver, N_("TV driver name (v4l|v4l2)"),"DRIVER"},	
     {"tvinput",0,0,G_OPTION_ARG_STRING, &tv_input, N_("TV input name"),"INPUT"},	
@@ -81,15 +82,21 @@ static GOptionEntry entries[] = {
 gint play_file(gchar * filename, gint playlist)
 {
 
-    ThreadData *thread_data = (ThreadData *) g_malloc(sizeof(ThreadData));
+	ThreadData *thread_data = (ThreadData *) g_new0(ThreadData, 1);
     GtkWidget *dialog;
     gchar *error_msg = NULL;
+	gchar *subtitle;
 
 	if (verbose)
 		printf("playing - %s\n",filename);
 	
     shutdown();
     g_strlcpy(thread_data->filename, filename, 1024);
+	
+	gtk_tree_model_get(GTK_TREE_MODEL(playliststore), &iter,SUBTITLE_COLUMN,&subtitle,-1);
+	if (subtitle != NULL) {
+		g_strlcpy(thread_data->subtitle,subtitle,1024);	
+	}
 
     if (g_ascii_strcasecmp(filename, "") != 0) {
 		if (!device_name(filename)) {
@@ -191,6 +198,7 @@ int main(int argc, char *argv[])
 	playlistname = NULL;
 	thread = NULL;
 	rpconsole = NULL;
+	subtitle = NULL;
 	tv_device = NULL;
 	tv_driver = NULL;
 	tv_width = 0;
